--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI='mongodb://0.0.0.0:27017/dreamhome'
+MONGO_URI='mongodb+srv://sergio:sergio7174@todo-cluster.exvim.mongodb.net/'
 JWT_SECRET='sergio'
